feat: Complete user module
